--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Landing Page Profissional</h1>
     <p>Gere mais leads direto no WhatsApp</p>
 
-    <form name="contato" method="POST" data-netlify="true">
+    <form name="contact" method="POST" data-netlify="true">
       <input type="text" name="nome" placeholder="Seu nome" required>
       <input type="email" name="email" placeholder="Seu email" required>
       <button type="submit">Quero saber mais</button>
@@ -21,4 +21,5 @@
   </section>
 
 </body>
+
 </html>
