--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <h1>Landing Page Profissional</h1>
     <p>Gere mais leads direto no WhatsApp</p>
 
-    <form name="contact" method="POST" data-netlify="true">
-      <input type="text" name="nome" placeholder="Seu nome" required>
-      <input type="email" name="email" placeholder="Seu email" required>
-      <button type="submit">Quero saber mais</button>
-    </form>
+    <form method="POST" action="https://hook.us2.make.com/j59sqd5g9bbiolfgyhh2ovix55bz4hjy">
+  <input type="text" name="nome" placeholder="Seu nome" required>
+  <input type="email" name="email" placeholder="Seu email" required>
+  <button type="submit">Quero saber mais</button>
+</form>
 
   </section>
 
 </body>
 
 </html>
+
