--- a/index.html
+++ b/index.html
@@ -12,15 +12,46 @@
     <h1>Landing Page Profissional</h1>
     <p>Gere mais leads direto no WhatsApp</p>
 
-    <form method="POST" action="https://hook.us2.make.com/j59sqd5g9bbiolfgyhh2ovix55bz4hjy">
-  <input type="text" name="nome" placeholder="Seu nome" required>
-  <input type="email" name="email" placeholder="Seu email" required>
-  <button type="submit">Quero saber mais</button>
-</form>
+    <form id="leadForm">
+      <input type="text" id="nome" placeholder="Seu nome" required>
+      <input type="email" id="email" placeholder="Seu email" required>
+      <input type="text" id="phone" placeholder="Seu WhatsApp com DDD" required>
+      <button type="submit">Quero saber mais</button>
+    </form>
 
+    <p id="status"></p>
   </section>
 
+<script>
+document.getElementById("leadForm").addEventListener("submit", async function(e) {
+  e.preventDefault();
+
+  const nome = document.getElementById("nome").value;
+  const email = document.getElementById("email").value;
+  const phone = document.getElementById("phone").value.replace(/\D/g, '');
+
+  try {
+    await fetch("https://hook.us2.make.com/j59sqd5g9bbiolfgyhh2ovix55bz4hjy", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({
+        nome: nome,
+        email: email,
+        phone: phone
+      })
+    });
+
+    document.getElementById("status").innerText = "Enviado com sucesso!";
+    document.getElementById("leadForm").reset();
+
+  } catch (error) {
+    document.getElementById("status").innerText = "Erro ao enviar.";
+    console.error(error);
+  }
+});
+</script>
+
 </body>
-
 </html>
-
